Disable useless neogradle behavior

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ org.gradle.cache = true
 org.gradle.daemon = false
 org.gradle.jvmargs = -Xmx3G
 org.gradle.parallel = true
+
+neogradle.subsystems.conventions.ide.enabled=false
+neogradle.subsystems.conventions.runs.enabled=false
