Implement new module configuration schema

--- a/platform/fabric/build.properties
+++ b/platform/fabric/build.properties
@@ -1,3 +1,8 @@
+module_name = fabric
+used_modules = core,shared:mixin
+resources = fabric.mod.json;quilt.mod.json
+base_jar_task = remapJar
+
 # platform specific
 minecraft_version = 1.14.4
 yarn_mappings = 1.14.4+build.18
