--- a/platform/forge/v1/build.properties
+++ b/platform/forge/v1/build.properties
@@ -1,3 +1,7 @@
+module_name = forge-v1
+used_modules = core,platform:forge:transformers,shared:asm
+resources = mcmod.info
+
 # platform specific
 minecraft_version = 1.12.2
 forge_version = 14.23.5.2860
