--- a/platform/forge/v2/build.properties
+++ b/platform/forge/v2/build.properties
@@ -1,10 +1,9 @@
+module_name = forge-v2
+used_modules = core,platform:forge:transformers,shared:asm
+resources = mcmod.info;META-INF/mods.toml
+
 # platform specific
 minecraft_version = 1.12.2
 forge_version = 14.23.5.2860
 mappings_channel = snapshot
 mappings_version = 20180814-1.12
-
-#minecraft_version = 1.13.2
-#forge_version = 25.0.223
-#mappings_channel = snapshot
-#mappings_version = 20190530-1.13.2
