--- a/platform/forge/v3/build.properties
+++ b/platform/forge/v3/build.properties
@@ -1,3 +1,8 @@
+module_name = forge-v3
+used_modules = core,shared:mixin
+resources = META-INF/mods.toml
+java_version = 16
+
 # platform specific
 minecraft_version = 1.17.1
 forge_version = 37.1.1
