--- a/platform/forge/v4/build.properties
+++ b/platform/forge/v4/build.properties
@@ -1,3 +1,10 @@
+module_name = forge-v4
+used_modules = core,shared:mixin
+resources = META-INF/mods.toml
+java_version = 21
+base_jar_task = transformJarContentBeforeShadow
+publish_jar_task = transformJarContentAfterShadow
+
 # platform specific
 minecraft_version = 1.20.6
 forge_version = 50.1.39
