--- a/platform/neoforge/build.properties
+++ b/platform/neoforge/build.properties
@@ -1,3 +1,8 @@
+module_name = neoforge
+used_modules = core,shared:mixin
+resources = META-INF/mods.toml;META-INF/neoforge.mods.toml
+java_version = 17
+
 # platform specific
 minecraft_version = 1.20.2
 neoforge_version = 20.2.88
