--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 # mod info
 mod_id = elfeatures
 mod_name = ELFeatures
-mod_version = 1.0.0
-mod_license = GPL-3.0
+mod_version = 1.1.0
+mod_license = MIT
 mod_description = Support for EasyLauncher features in your Minecraft client
 mod_full_description = Support for EasyLauncher features in your Minecraft client:\n\
   - HD skins & capes provided by EasyX\n\
