Add base Vanilla implementations

--- a/platform/vanilla/modern/build.properties
+++ b/platform/vanilla/modern/build.properties
@@ -1,7 +1,7 @@
-module_name = vanilla-legacy
+module_name = vanilla-modern
 used_modules = core,platform:vanilla:tweaker,shared:mixin
 base_jar_task = remapJar
 
 # platform specific
-minecraft_version = 1.7.2
-yarn_mappings = 1.7.2+build.551
+minecraft_version = 1.14
+yarn_mappings = 1.14+build.21
